--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -87,96 +87,96 @@ jobs:
           name: bindings-${{ matrix.settings.target }}
           path: watcher/*.node
           if-no-files-found: error
-  test-host:
-    strategy:
-      fail-fast: false
-      matrix:
-        settings:
-          - target: x86_64-apple-darwin
-            host: macos-latest
-            architecture: x64
-          - target: aarch64-apple-darwin
-            host: macos-latest
-            architecture: arm64
-          - target: x86_64-pc-windows-msvc
-            host: windows-latest
-            architecture: x64
-        node: ['24']
-    runs-on: ${{ matrix.settings.host }}
-    needs:
-      - build
-    steps:
-      - uses: actions/checkout@v6
-      - uses: oven-sh/setup-bun@v2
-      - uses: actions/setup-node@v6
-        with:
-          node-version: ${{ matrix.node }}
-          architecture: ${{ matrix.settings.architecture }}
-      - name: Install dependencies
-        run: bun install
-      - name: Download bindings
-        uses: actions/download-artifact@v7
-        with:
-          name: bindings-${{ matrix.settings.target }}
-          path: watcher/
-      - name: Run tests
-        run: bun run --filter="@enk0ded/watcher" test
-  test-docker:
-    strategy:
-      fail-fast: false
-      matrix:
-        settings:
-          - target: x86_64-unknown-linux-gnu
-            docker: node:24-slim
-            args: ''
-          - target: aarch64-unknown-linux-gnu
-            docker: node:24-slim
-            args: '--platform linux/arm64'
-          - target: x86_64-unknown-linux-musl
-            docker: node:24-alpine
-            args: ''
-          - target: aarch64-unknown-linux-musl
-            docker: node:24-alpine
-            args: '--platform linux/arm64'
-          - target: armv7-unknown-linux-gnueabihf
-            docker: node:24-bookworm-slim
-            args: '--platform linux/arm/v7'
-          - target: s390x-unknown-linux-gnu
-            docker: node:24-slim
-            args: '--platform linux/s390x'
-          - target: powerpc64le-unknown-linux-gnu
-            docker: node:24-slim
-            args: '--platform linux/ppc64le'
-    runs-on: ${{ contains(matrix.settings.target, 'aarch64') && 'ubuntu-24.04-arm' || 'ubuntu-latest' }}
-    needs:
-      - build
-    steps:
-      - uses: actions/checkout@v6
-      - uses: oven-sh/setup-bun@v2
-      - uses: actions/setup-node@v6
-        with:
-          node-version: 24
-      - name: Install dependencies
-        run: bun install
-      - name: Download bindings
-        uses: actions/download-artifact@v7
-        with:
-          name: bindings-${{ matrix.settings.target }}
-          path: watcher/
-      - name: Set up QEMU
-        if: ${{ !contains(matrix.settings.target, 'aarch64') }}
-        uses: docker/setup-qemu-action@v3
-        with:
-          platforms: arm64,arm
-      - run: docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
-        if: ${{ !contains(matrix.settings.target, 'aarch64') }}
-      - name: Run tests
-        uses: addnab/docker-run-action@v3
-        # Node.js on qemu randomly segfaults on powerpc64le
-        continue-on-error: ${{ matrix.settings.target == 'powerpc64le-unknown-linux-gnu' }}
-        with:
-          image: ${{ matrix.settings.docker }}
-          options: ${{ matrix.settings.args }} -v ${{ github.workspace }}:/build -w /build
-          run: |
-            set -e
-            bun run --filter="@enk0ded/watcher" test
+  # test-host:
+  #   strategy:
+  #     fail-fast: false
+  #     matrix:
+  #       settings:
+  #         - target: x86_64-apple-darwin
+  #           host: macos-latest
+  #           architecture: x64
+  #         - target: aarch64-apple-darwin
+  #           host: macos-latest
+  #           architecture: arm64
+  #         - target: x86_64-pc-windows-msvc
+  #           host: windows-latest
+  #           architecture: x64
+  #       node: ['24']
+  #   runs-on: ${{ matrix.settings.host }}
+  #   needs:
+  #     - build
+  #   steps:
+  #     - uses: actions/checkout@v6
+  #     - uses: oven-sh/setup-bun@v2
+  #     - uses: actions/setup-node@v6
+  #       with:
+  #         node-version: ${{ matrix.node }}
+  #         architecture: ${{ matrix.settings.architecture }}
+  #     - name: Install dependencies
+  #       run: bun install
+  #     - name: Download bindings
+  #       uses: actions/download-artifact@v7
+  #       with:
+  #         name: bindings-${{ matrix.settings.target }}
+  #         path: watcher/
+  #     - name: Run tests
+  #       run: bun run --filter="@enk0ded/watcher" test
+  # test-docker:
+  #   strategy:
+  #     fail-fast: false
+  #     matrix:
+  #       settings:
+  #         - target: x86_64-unknown-linux-gnu
+  #           docker: node:24-slim
+  #           args: ''
+  #         - target: aarch64-unknown-linux-gnu
+  #           docker: node:24-slim
+  #           args: '--platform linux/arm64'
+  #         - target: x86_64-unknown-linux-musl
+  #           docker: node:24-alpine
+  #           args: ''
+  #         - target: aarch64-unknown-linux-musl
+  #           docker: node:24-alpine
+  #           args: '--platform linux/arm64'
+  #         - target: armv7-unknown-linux-gnueabihf
+  #           docker: node:24-bookworm-slim
+  #           args: '--platform linux/arm/v7'
+  #         - target: s390x-unknown-linux-gnu
+  #           docker: node:24-slim
+  #           args: '--platform linux/s390x'
+  #         - target: powerpc64le-unknown-linux-gnu
+  #           docker: node:24-slim
+  #           args: '--platform linux/ppc64le'
+  #   runs-on: ${{ contains(matrix.settings.target, 'aarch64') && 'ubuntu-24.04-arm' || 'ubuntu-latest' }}
+  #   needs:
+  #     - build
+  #   steps:
+  #     - uses: actions/checkout@v6
+  #     - uses: oven-sh/setup-bun@v2
+  #     - uses: actions/setup-node@v6
+  #       with:
+  #         node-version: 24
+  #     - name: Install dependencies
+  #       run: bun install
+  #     - name: Download bindings
+  #       uses: actions/download-artifact@v7
+  #       with:
+  #         name: bindings-${{ matrix.settings.target }}
+  #         path: watcher/
+  #     - name: Set up QEMU
+  #       if: ${{ !contains(matrix.settings.target, 'aarch64') }}
+  #       uses: docker/setup-qemu-action@v3
+  #       with:
+  #         platforms: arm64,arm
+  #     - run: docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
+  #       if: ${{ !contains(matrix.settings.target, 'aarch64') }}
+  #     - name: Run tests
+  #       uses: addnab/docker-run-action@v3
+  #       # Node.js on qemu randomly segfaults on powerpc64le
+  #       continue-on-error: ${{ matrix.settings.target == 'powerpc64le-unknown-linux-gnu' }}
+  #       with:
+  #         image: ${{ matrix.settings.docker }}
+  #         options: ${{ matrix.settings.args }} -v ${{ github.workspace }}:/build -w /build
+  #         run: |
+  #           set -e
+  #           bun run --filter="@enk0ded/watcher" test
