--- a/package.json
+++ b/package.json
@@ -1,22 +1,89 @@
 {
+  "name": "@enk0ded/watcher",
+  "version": "0.1.0",
+  "description": "A high-performance file system watcher for Node.js, written in Rust and exposed via N-API bindings",
   "type": "module",
-  "workspaces": ["watcher"],
-  "packageManager": "bun@1.3.5",
+  "main": "index.js",
+  "types": "index.d.ts",
+  "repository": {
+    "type": "git",
+    "url": "git+ssh://git@github.com/enk0ded/watcher.git"
+  },
+  "license": "MIT",
+  "browser": "browser.js",
+  "keywords": [
+    "watcher",
+    "file system watcher",
+    "file system",
+    "napi-rs"
+  ],
+  "files": [
+    "index.d.ts",
+    "index.js",
+    "browser.js"
+  ],
+  "napi": {
+    "binaryName": "watcher",
+    "targets": [
+      "x86_64-apple-darwin",
+      "aarch64-apple-darwin",
+      "x86_64-pc-windows-msvc",
+      "x86_64-unknown-linux-gnu",
+      "x86_64-unknown-linux-musl",
+      "aarch64-unknown-linux-gnu",
+      "aarch64-unknown-linux-musl",
+      "aarch64-linux-android",
+      "wasm32-wasip1-threads"
+    ]
+  },
+  "engines": {
+    "node": ">=20"
+  },
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org/",
+    "access": "public"
+  },
   "scripts": {
-    "format": "bun run format:prettier && bun run format:rs",
+    "artifacts": "napi artifacts",
+    "build": "napi build --platform --esm --release",
+    "build:debug": "napi build --platform --esm",
+    "format": "run-p format:prettier format:rs format:toml",
     "format:prettier": "prettier . -w",
+    "format:toml": "taplo format",
     "format:rs": "cargo fmt",
-    "lint": "eslint . && cargo clippy",
-    "lint:fix": "eslint . --fix"
+    "lint": "eslint --fix",
+    "prepublishOnly": "napi prepublish -t npm",
+    "preversion": "napi build --platform && git add .",
+    "version": "napi version"
   },
   "devDependencies": {
+    "@emnapi/core": "^1.5.0",
+    "@emnapi/runtime": "^1.5.0",
+    "@napi-rs/cli": "^3.5.1",
+    "@taplo/cli": "^0.7.0",
+    "@tybys/wasm-util": "^0.10.0",
     "@types/bun": "latest",
-    "eslint": "^9.39.2",
     "eslint-config-enk0ded": "^1.5.0",
+    "eslint": "^9.39.2",
     "globals": "^17.0.0",
+    "husky": "^9.1.7",
     "jiti": "^2.6.1",
+    "lint-staged": "^16.1.6",
+    "npm-run-all2": "^8.0.4",
     "prettier": "^3.7.4",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.51.0"
-  }
+  },
+  "lint-staged": {
+    "*.@(js|ts|tsx)": [
+      "eslint --fix"
+    ],
+    "*.@(js|ts|tsx|yml|yaml|md|json)": [
+      "prettier --write"
+    ],
+    "*.toml": [
+      "taplo format"
+    ]
+  },
+  "packageManager": "bun@1.3.5"
 }
