--- a/package.json
+++ b/package.json
@@ -32,8 +32,7 @@
       "x86_64-unknown-linux-musl",
       "aarch64-unknown-linux-gnu",
       "aarch64-unknown-linux-musl",
-      "aarch64-linux-android",
-      "wasm32-wasip1-threads"
+      "aarch64-linux-android"
     ]
   },
   "engines": {
@@ -61,7 +60,6 @@
     "@emnapi/runtime": "^1.5.0",
     "@napi-rs/cli": "^3.5.1",
     "@taplo/cli": "^0.7.0",
-    "@tybys/wasm-util": "^0.10.0",
     "@types/bun": "latest",
     "eslint-config-enk0ded": "^1.5.0",
     "eslint": "^9.39.2",
