--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -186,9 +186,9 @@ jobs:
           - host: windows-latest
             target: x86_64-pc-windows-msvc
             architecture: x64
-          - host: windows-11-arm
-            target: aarch64-pc-windows-msvc
-            architecture: arm64
+          # - host: windows-11-arm
+          #   target: aarch64-pc-windows-msvc
+          #   architecture: arm64
           - host: macos-latest
             target: aarch64-apple-darwin
             architecture: arm64
