--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -29,11 +29,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v6
-      - name: Setup node
-        uses: actions/setup-node@v6
-        with:
-          node-version: 24
-      - uses: oven-sh/setup-bun@v2
+      - name: Setup bun
+        uses: oven-sh/setup-bun@v2
       - name: Install
         uses: dtolnay/rust-toolchain@stable
         with:
@@ -62,7 +59,7 @@ jobs:
             build: bun run build --target x86_64-pc-windows-msvc
           # - host: windows-latest
           #   target: aarch64-pc-windows-msvc
-          #   build: yarn build --target aarch64-pc-windows-msvc
+          #   build: bun run  build --target aarch64-pc-windows-msvc
           - host: ubuntu-latest
             target: x86_64-unknown-linux-gnu
             build: bun run build --target x86_64-unknown-linux-gnu --use-napi-cross
@@ -78,15 +75,12 @@ jobs:
           - host: ubuntu-latest
             target: aarch64-linux-android
             build: bun run build --target aarch64-linux-android
-    name: stable - ${{ matrix.settings.target }} - node@24
+    name: stable - ${{ matrix.settings.target }}
     runs-on: ${{ matrix.settings.host }}
     steps:
       - uses: actions/checkout@v6
-      - name: Setup node
-        uses: actions/setup-node@v6
-        with:
-          node-version: 24
-      - uses: oven-sh/setup-bun@v2
+      - name: Setup bun
+        uses: oven-sh/setup-bun@v2
       - name: Install
         uses: dtolnay/rust-toolchain@stable
         with:
@@ -106,7 +100,7 @@ jobs:
       - uses: mlugg/setup-zig@v2
         if: ${{ contains(matrix.settings.target, 'musl') }}
         with:
-          version: 0.14.1
+          version: 0.15.2
       - name: Install cargo-zigbuild
         uses: taiki-e/install-action@v2
         if: ${{ contains(matrix.settings.target, 'musl') }}
@@ -131,52 +125,8 @@ jobs:
             ${{ env.APP_NAME }}.*.node
           if-no-files-found: error
 
-  # build-freebsd:
-  #   runs-on: ubuntu-latest
-  #   name: Build FreeBSD
-  #   steps:
-  #     - uses: actions/checkout@v6
-  #     - name: Build
-  #       id: build
-  #       uses: cross-platform-actions/action@v0.32.0
-  #       env:
-  #         DEBUG: napi:*
-  #         RUSTUP_IO_THREADS: 1
-  #       with:
-  #         operating_system: freebsd
-  #         version: '14.3'
-  #         memory: 8G
-  #         cpu_count: 3
-  #         environment_variables: 'DEBUG RUSTUP_IO_THREADS'
-  #         shell: bash
-  #         run: |
-  #           sudo pkg install -y -f curl node libnghttp2 npm cmake
-  #           sudo npm install -g yarn --ignore-scripts
-  #           curl https://sh.rustup.rs -sSf --output rustup.sh
-  #           sh rustup.sh -y --profile minimal --default-toolchain stable
-  #           source "$HOME/.cargo/env"
-  #           echo "~~~~ rustc --version ~~~~"
-  #           rustc --version
-  #           echo "~~~~ node -v ~~~~"
-  #           node -v
-  #           pwd
-  #           ls -lah
-  #           whoami
-  #           env
-  #           freebsd-version
-  #           npm install
-  #           npm run build
-  #           rm -rf node_modules
-  #           rm -rf target
-  #     - name: Upload artifact
-  #       uses: actions/upload-artifact@v6
-  #       with:
-  #         name: bindings-freebsd
-  #         path: ${{ env.APP_NAME }}.*.node
-  #         if-no-files-found: error
-
-  test-macOS-windows-binding:
-    name: Test bindings on ${{ matrix.settings.target }} - node@${{ matrix.node }}
+  test-macos-windows-binding:
+    name: Test bindings on ${{ matrix.settings.target }}
     needs:
       - build
     strategy:
@@ -195,19 +145,13 @@ jobs:
           - host: macos-latest
             target: x86_64-apple-darwin
             architecture: x64
-        node:
-          - '24'
     runs-on: ${{ matrix.settings.host }}
     steps:
       - uses: actions/checkout@v6
-      - name: Setup node
-        uses: actions/setup-node@v6
-        with:
-          node-version: ${{ matrix.node }}
-          architecture: ${{ matrix.settings.architecture }}
-      - uses: oven-sh/setup-bun@v2
+      - name: Setup bun
+        uses: oven-sh/setup-bun@v2
       - name: Install dependencies
-        run: bun install
+        run: bun install --cpu=${{ matrix.settings.architecture }}
       - name: Download artifacts
         uses: actions/download-artifact@v7
         with:
@@ -220,7 +164,7 @@ jobs:
         run: bun test
 
   test-linux-binding:
-    name: Test ${{ matrix.target }} - node@${{ matrix.node }}
+    name: Test ${{ matrix.target }}
     needs:
       - build
     strategy:
@@ -231,38 +175,30 @@ jobs:
           - x86_64-unknown-linux-musl
           - aarch64-unknown-linux-gnu
           - aarch64-unknown-linux-musl
-        node:
-          - '24'
     runs-on: ${{ contains(matrix.target, 'aarch64') && 'ubuntu-24.04-arm' || 'ubuntu-latest' }}
     steps:
       - uses: actions/checkout@v6
-      - name: Setup node
-        uses: actions/setup-node@v6
-        with:
-          node-version: ${{ matrix.node }}
-      - uses: oven-sh/setup-bun@v2
+      - name: Setup bun
+        uses: oven-sh/setup-bun@v2
       - name: Output docker params
         id: docker
         run: |
-          node -e "
+          bun -e "
             if ('${{ matrix.target }}'.startsWith('aarch64')) {
               console.log('PLATFORM=linux/arm64')
             } else {
               console.log('PLATFORM=linux/amd64')
             }
           " >> $GITHUB_OUTPUT
-          node -e "
+          bun -e "
             if ('${{ matrix.target }}'.endsWith('-musl')) {
-              console.log('IMAGE=node:${{ matrix.node }}-alpine')
+              console.log('IMAGE=oven/bun:alpine')
             } else {
-              console.log('IMAGE=node:${{ matrix.node }}-slim')
+              console.log('IMAGE=oven/bun:slim')
             }
           " >> $GITHUB_OUTPUT
       - name: Install dependencies
-        run: |
-          npm config set --json supportedArchitectures.cpu '["current", "arm64", "x64", "arm"]'
-          npm config set --json supportedArchitectures.libc '["current", "musl", "gnu"]'
-          bun install
+        run: bun install --force
       - name: Download artifacts
         uses: actions/download-artifact@v7
         with:
@@ -287,24 +223,25 @@ jobs:
     needs:
       - lint
       - build
-      # - build-freebsd
-      - test-macOS-windows-binding
+      - test-macos-windows-binding
       - test-linux-binding
     steps:
       - uses: actions/checkout@v6
+      - name: Setup bun
+        uses: oven-sh/setup-bun@v2
       - name: Setup node
         uses: actions/setup-node@v6
         with:
           node-version: 24
-      - uses: oven-sh/setup-bun@v2
       - name: Install dependencies
         run: bun install
-      - name: Create npm dirs
-        run: bun napi create-npm-dirs
+
       - name: Download all artifacts
         uses: actions/download-artifact@v7
         with:
           path: artifacts
+      - name: Create npm dirs
+        run: bun create-npm-dirs
       - name: Move artifacts
         run: bun artifacts
       - name: List packages
@@ -312,15 +249,14 @@ jobs:
         shell: bash
       - name: Publish
         run: |
-          npm config set provenance true
-          if git log -1 --pretty=%B | grep "^[0-9]\+\.[0-9]\+\.[0-9]\+$";
+          if git log -1 --pretty=%B | grep "^v\?[0-9]\+\.[0-9]\+\.[0-9]\+$";
           then
             echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" >> ~/.npmrc
-            bun npm publish --access public
-          elif git log -1 --pretty=%B | grep "^[0-9]\+\.[0-9]\+\.[0-9]\+";
+            bunx npm publish --provenance --access public
+          elif git log -1 --pretty=%B | grep "^v\?[0-9]\+\.[0-9]\+\.[0-9]\+";
           then
             echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" >> ~/.npmrc
-            bun npm publish --tag next --access public
+            bunx npm publish --provenance --tag next --access public
           else
             echo "Not a release, skipping publish"
           fi
