--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ version      = "0.1.0"
 crate-type = ["cdylib"]
 
 [dependencies]
+dunce = "1"
 globset = "0.4"
 napi = { version = "3", default-features = false, features = [
   "async",
@@ -24,5 +25,6 @@ notify-debouncer-full = "0.6"
 napi-build = "2"
 
 [profile.release]
-lto   = true
+codegen-units = 1
+lto = true
 strip = "symbols"
