--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,6 +27,6 @@
     "noUnusedParameters": false,
     "noPropertyAccessFromIndexSignature": false
   },
-  "include": ["**/*.ts"],
-  "exclude": ["@OLD", "node_modules", "target", "watcher", "**/*.test.ts"]
+  "include": ["."],
+  "exclude": ["node_modules", "__test__"]
 }
