💚 fix CI tests hopefully

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -43,6 +43,7 @@ jobs:
         run: cargo fmt -- --check
       - name: Clippy
         run: cargo clippy
+
   build:
     strategy:
       fail-fast: false
@@ -135,23 +136,19 @@ jobs:
         settings:
           - host: windows-latest
             target: x86_64-pc-windows-msvc
-            architecture: x64
           # - host: windows-11-arm
           #   target: aarch64-pc-windows-msvc
-          #   architecture: arm64
           - host: macos-latest
             target: aarch64-apple-darwin
-            architecture: arm64
-          - host: macos-latest
+          - host: macos-15-intel
             target: x86_64-apple-darwin
-            architecture: x64
     runs-on: ${{ matrix.settings.host }}
     steps:
       - uses: actions/checkout@v6
       - name: Setup bun
         uses: oven-sh/setup-bun@v2
       - name: Install dependencies
-        run: bun install --cpu=${{ matrix.settings.architecture }}
+        run: bun install
       - name: Download artifacts
         uses: actions/download-artifact@v7
         with:
