--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -138,10 +138,10 @@ jobs:
             target: x86_64-pc-windows-msvc
           # - host: windows-11-arm
           #   target: aarch64-pc-windows-msvc
-          - host: macos-latest
-            target: aarch64-apple-darwin
-          - host: macos-15-intel
-            target: x86_64-apple-darwin
+          # - host: macos-latest
+          #   target: aarch64-apple-darwin
+          # - host: macos-15-intel
+          #   target: x86_64-apple-darwin
     runs-on: ${{ matrix.settings.host }}
     steps:
       - uses: actions/checkout@v6
