--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -17,7 +17,10 @@ on:
       - '**/*.gitignore'
       - .editorconfig
       - docs/**
+  release:
+    types: [published]
   pull_request:
+  
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
