--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "types": "index.d.ts",
   "repository": {
     "type": "git",
-    "url": "git+ssh://git@github.com/enk0ded/watcher.git"
+    "url": "git+https://github.com/enk0ded/watcher.git"
   },
   "license": "MIT",
   "keywords": [
