--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "@enk0ded/watcher",
-  "version": "0.3.0",
+  "version": "0.3.1",
   "description": "A high-performance file system watcher for Node.js, written in Rust and exposed via N-API bindings",
   "type": "module",
   "main": "index.js",
   "types": "index.d.ts",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/enk0ded/watcher.git"
+    "url": "https://github.com/enk0ded/watcher"
   },
   "license": "MIT",
   "keywords": [
