--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -250,11 +250,11 @@ jobs:
           if git log -1 --pretty=%B | grep "^v\?[0-9]\+\.[0-9]\+\.[0-9]\+$";
           then
             echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" >> ~/.npmrc
-            bunx npm publish --provenance --access public
+            bunx npm publish --access public
           elif git log -1 --pretty=%B | grep "^v\?[0-9]\+\.[0-9]\+\.[0-9]\+";
           then
             echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" >> ~/.npmrc
-            bunx npm publish --provenance --tag next --access public
+            bunx npm publish --tag next --access public
           else
             echo "Not a release, skipping publish"
           fi
